# MM_meadowlarkLC_opensource

./: .gitignore  README.md
Windows10_Compiled/MM2.0gamma_11_13_2021/: mmgr_dal_MeadowlarkLC.csv
src/: Makefile.am  MeadowlarkLC.aps  MeadowlarkLC.cpp  MeadowlarkLC.h  MeadowlarkLC.rc  MeadowlarkLC.sln  MeadowlarkLC.vcproj  MeadowlarkLC.vcxproj  usb_ver.cpp  usbdrvd32.exp  usbdrvd32.h  usbdrvd64.def  usbdrvd64.exp
