pkglibdir = $(DEVICEADAPTERPATH)
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) -fpermissive -fweak $(BOOST_CPPFLAGS)
pkglib_LTLIBRARIES = libmmgr_dal_MeadowlarkLC.la
libmmgr_dal_MeadowlarkLC_la_SOURCES = MeadowlarkLC.cpp MeadowlarkLC.h ../../MMDevice/MMDevice.h
libmmgr_dal_MeadowlarkLC_la_LDFLAGS = $(MMDEVAPI_LDFLAGS) 
libmmgr_dal_MeadowlarkLC_la_LIBADD = $(MMDEVAPI_LIBADD)
